# SGInterCommunication

./: .gitignore  .gitmodules  Architecture.md  CMakeLists.txt  DEPENDENCIES.md  README.md  SGIPCConfig.cmake  SGIPCConfigVersion.cmake  THIRDPARTY.md  build.bat  build.sh  setup_dev_env.bat  setup_dev_env.ps1  vcpkg.json
cmake/: CommonBuildParameters.cmake  CompilationFlags.cmake  SGIPCConfig.cmake.in  config.cmake.in  functions.cmake  simple_messages.hpp.in
examples/: CMakeLists.txt  multi_instance_example.cpp  port_negotiation_example.cpp  simple_ipc_example.cpp
include/sgipc/: cross_platform_ipc.hpp  file_based_ipc.hpp  ios_pasteboard_ipc.hpp  libp2p_ipc.hpp
proto/: ipc_messages.proto
src/: CMakeLists.txt  cross_platform_ipc.cpp  file_based_ipc.cpp  libp2p_ipc.cpp
src/proto/: ipc_messages.proto
test/: CMakeLists.txt  integration_test.cpp  sgipc_test.cpp
